roles/metallb/files/network-policy-remote-node.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-policy"
  namespace: metallb-system
spec:
  description: "Webhook remote-node ingress"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metallb
      app.kubernetes.io/instance: metallb
  ingress:
  - fromEntities:
      - remote-node
